--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.18.0",
+    "axios": "^1.12.2",
+    "embla-carousel-react": "^8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-horizontal-scrolling-menu": "^2.7.1",
+    "react-horizontal-scrolling-menu": "^2.8.2",
+    "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1"
