--- a/FitnessTracker/package.json
+++ b/FitnessTracker/package.json
@@ -5,16 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^5.18.0",
+    "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.18.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-horizontal-scrolling-menu": "^2.7.1",
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "5.0.1",
-    "rechart": "^0.0.1",
-    "recharts": "^3.2.1"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
