--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.18.0",
     "axios": "^1.12.2",
     "embla-carousel-react": "^8.6.0",
+    "formik": "^2.4.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-horizontal-scrolling-menu": "^2.8.2",
@@ -17,7 +18,8 @@
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "rechart": "^0.0.1",
-    "recharts": "^3.2.1"
+    "recharts": "^3.3.0",
+    "yup": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
