--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,8 @@
     "yup": "^1.7.1"
   },
   "scripts": {
-    "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\"",
-  "start-backend": "cd backend && node src/server.js",
-  "start-frontend": "cd frontend && react-scripts start",
+    "start": "set PORT=3002 && react-scripts start",
+    "start-backend": "cd backend && node src/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
