--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+node_modules/
 /node_modules
+frontend/node_modules/
+backend/node_modules/
 /.pnp
 .pnp.js
 
@@ -10,14 +13,36 @@
 
 # production
 /build
+frontend/build/
+backend/dist/
 
-# misc
-.DS_Store
+# cache files
+.cache/
+frontend/.cache/
+backend/.cache/
+frontend/node_modules/.cache/
+
+# environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+frontend/.env
+backend/.env
 
+# misc
+.DS_Store
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+
+# IDE
+.vscode/
+.idea/
+
+# OS files
+Thumbs.db
