--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.12.2",
     "embla-carousel-react": "^8.6.0",
     "es-toolkit": "^1.40.0",
+    "express-session": "^1.18.2",
     "formik": "^2.4.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -27,8 +28,8 @@
   },
   "scripts": {
     "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\"",
-  "start-backend": "cd backend && node src/server.js",
-  "start-frontend": "cd frontend && react-scripts start",
+    "start-backend": "cd backend && node src/server.js",
+    "start-frontend": "cd frontend && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
