--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
-PORT=5000
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=your_mysql_password
+DB_PASSWORD=
 DB_NAME=fitness_tracker
+PORT=5000
+SESSION_SECRET=your-secret-key-here
+CORS_ORIGIN=http://localhost:5173
