--- a/package.json
+++ b/package.json
@@ -11,12 +11,8 @@
     "axios": "^1.12.2",
     "embla-carousel-react": "^8.6.0",
     "es-toolkit": "^1.40.0",
-<<<<<<< HEAD
-    "formik": "^2.4.9",
-=======
     "express-session": "^1.18.2",
     "formik": "^2.4.6",
->>>>>>> 5f2c79d09f2b4c97200d7c7aeb0cd91fe33eeb50
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-horizontal-scrolling-menu": "^2.8.2",
@@ -32,7 +28,7 @@
   },
   "scripts": {
     "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\"",
-    "start-backend": "cd backend && npm start",
+    "start-backend": "cd backend && nodemon start",
     "start-frontend": "cd frontend && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
